--- a/style.css
+++ b/style.css
@@ -472,12 +472,12 @@ a {
   width: 350px;
   margin: 30px auto;
   height: 400px;
-  padding-top: 0px;
+  padding: 10px;
   border-radius: 10px;
-  background-color: #D1B35B;
   display: block;
   padding-top: 30px;
-  text-align: center;
+  text-align: left;
+  box-shadow: 0px 5px 28px rgba(0, 0, 0, 0.1607843137);
   height: 400px;
   right: 50px;
   width: 280px;
@@ -626,6 +626,7 @@ a {
   flex-wrap: wrap;
   justify-content: space-between;
   text-align: left;
+  border-radius: 10px;
 }
 .appartment__top__right .form p {
   color: white;
@@ -687,22 +688,23 @@ a {
   justify-content: space-between;
   padding-left: 0;
   padding-right: 0;
-  margin: 10px auto;
+  margin: 15px auto;
 }
 .appartment .gallery__top a, .appartment .gallery__bottom a {
   flex: 1;
 }
 .appartment .gallery__top a img, .appartment .gallery__bottom a img {
   width: 90%;
-  margin: auto;
+  margin: 20px;
+  cursor: pointer;
+  margin: 20px auto;
+  border-radius: 10px;
+  transition: 500ms ease-in-out;
 }
 .appartment .gallery__top a:hover, .appartment .gallery__bottom a:hover {
   background-color: #575a83;
-}
-.appartment .gallery__top a:hover img, .appartment .gallery__bottom a:hover img {
   transform: scale(1.1);
 }
-
 .booking {
   width: 600px;
   margin: auto;
@@ -1226,12 +1228,12 @@ a {
   width: 350px;
   margin: 30px auto;
   height: 400px;
-  padding-top: 0px;
+  padding: 10px;
   border-radius: 10px;
-  background-color: #D1B35B;
   display: block;
   padding-top: 30px;
-  text-align: center;
+  text-align: left;
+  box-shadow: 0px 5px 28px rgba(0, 0, 0, 0.1607843137);
   height: auto;
   width: 500px;
   text-align: left;
@@ -1398,12 +1400,12 @@ a {
   width: 350px;
   margin: 30px auto;
   height: 400px;
-  padding-top: 0px;
+  padding: 10px;
   border-radius: 10px;
-  background-color: #D1B35B;
   display: block;
   padding-top: 30px;
-  text-align: center;
+  text-align: left;
+  box-shadow: 0px 5px 28px rgba(0, 0, 0, 0.1607843137);
   width: 320px;
   color: white;
 }
@@ -1479,6 +1481,38 @@ a {
 }
 .contact textarea {
   margin: 15px auto;
+}
+
+.connexion {
+  width: 80%;
+  text-align: center;
+  margin: 40px auto;
+}
+.connexion form {
+  margin: auto;
+  text-align: left;
+  width: 350px;
+  margin: 30px auto;
+  height: 400px;
+  padding: 10px;
+  border-radius: 10px;
+  display: block;
+  padding-top: 30px;
+  text-align: left;
+  box-shadow: 0px 5px 28px rgba(0, 0, 0, 0.1607843137);
+  width: 330px;
+}
+.connexion form button {
+  width: auto;
+  border-radius: 5px;
+  font-size: 1.5em;
+  height: 40px;
+  font-size: 1.3em;
+  cursor: pointer;
+  color: white;
+  margin: 0 auto;
+  background-color: #071339;
+  border-color: #071339;
 }
 
 .post {
