--- a/style.scss
+++ b/style.scss
@@ -26,12 +26,12 @@ $white: white;
     width: 350px;
     margin: 30px auto;
     height: 400px;
-    padding-top: 0px;
+    padding: 10px;
     border-radius: 10px;
-    background-color: $yellow;
     display: block;
     padding-top: 30px;
-    text-align: center;
+    text-align: left;
+    box-shadow: 0px 5px 28px #00000029;
 }
 
 @mixin content (){
@@ -656,6 +656,7 @@ a{
             margin: auto;
             @include flex(column);
             text-align: left;
+            border-radius: 10px;
 
             p{
                 color: white;
@@ -724,21 +725,23 @@ a{
             @include flex();
             padding-left: 0;
             padding-right: 0;
-            margin: 10px auto;
+            margin: 15px auto;
 
             a{
                 flex: 1;
 
                 img{
                     width: 90%;
-                    margin: auto;
+                    margin: 20px;
+                    @include image();
                 }
             }
 
             a:hover{
                 background-color: #575a83;
+                transform: scale(1.1);
                 img{
-                    transform: scale(1.1);
+
                 }
             }
         }
@@ -759,6 +762,7 @@ a{
     }
 
 }
+
 /*
 .about-section{
     width: 100%;
@@ -1399,8 +1403,6 @@ a{
 
 .reservation{
     padding-top: 120px;
-
-
 }
 
 .contact{
@@ -1424,6 +1426,23 @@ a{
 
     textarea{
         margin: 15px auto;
+    }
+}
+
+.connexion{
+    width: 80%;
+    text-align: center;
+    margin: 40px auto;
+
+    form{
+        margin: auto;
+        text-align: left;
+        @include form;
+        width: 330px;
+
+        button{
+            @include button($white, $blue, $blue);
+        }
     }
 }
 
